--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-redux-shopping-cart",
+  "proxy": "http://localhost:3300",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +13,10 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
